--- a/css/d.css
+++ b/css/d.css
@@ -220,7 +220,7 @@ body,html{height:100%;padding:0px;margin:0px;background-image: url("../img/backg
     z-index: 2;
 }
 #menuAjustes{
-    display: inline-block;
+    display: none;
     position: absolute;
     width: 100%;
     text-align: center;
