--- a/css/m.css
+++ b/css/m.css
@@ -1,363 +1,1 @@
-body,html{height:100%;padding:0px;margin:0px;background-image: url("../img/background.png");background-position:center;background-size:cover;}
-.a{
-	width:30%;
-	height:100%;
-	overflow:hidden;
-	position:fixed;
-	left:0px;
-	top:0px;
-	z-index:2;
-}
-#derecha{
-	width:30%;
-	height: 100%;
-	position:fixed;
-	top:0px;
-	right:0px;
-	display:inline-block;
-	z-index:2;
-}
-#nave{
-	text-align:center;
-	position:fixed;
-	top:10%;
-	width:100%;
-	height:30%;
-}
-#nave img{
-	height:100%;
-}
-#divLuna{
-	text-align:center;
-	z-index: 1;
-	height:10%;
-	width:100%;
-	position:fixed;
-	bottom:0px;
-	left:0px;
-}
-#luna{
-	height: 100%;
-	width:100%;
-}
-#divReiniciar{
-	position:absolute;
-	height:25%;
-	width:50%;
-	min-width: 80px;
-	top:30%;
-	right:10px;
-}
-#reiniciar{
-	cursor:pointer;
-	width:100%;
-	max-height: 100%;
-}
-#reiniciar:active {border-style: inset; border-color:purple; background-color:#9C27B0;}
-#reiniciar:hover {transform: scale(1.2);}
-#divMotor{
-	height:30%;
-	width:70%;
-	min-width:100px;
-	position:absolute;
-	bottom:0%;
-	right:0px;
-	
-}
-#motor{
-	position:absolute;
-	bottom:10%;
-	cursor:pointer;
-	width:100%;
-	max-height: 100%;
-}
-#cpanel{	
-	width:100%;
-	height:100%;
-}
-#divVelocidad{
-	display:inline-block;
-	height:80px;
-	width:90px;
-	text-align:center;
-	z-index:1;
-	background-image: url("../img/speedometerbase.png");
-	background-position:3px;
-	background-size: contain;
-	background-repeat: no-repeat;
-	position:absolute;
-	bottom:5%;
-}
-#aguja{
-	height:35%;
-	position:relative;
-	left:-3px;
-	top:30px;
-	
-}
-#divAltura{
-	background-image: url("../img/altura.png");
-	background-position: 10px;
-	background-size: contain;
-	background-repeat: no-repeat;
-	position:absolute;
-	height: 110px;
-	width: 70px;
-	top: 39%;
-}
-#altura{
-	height:30%;
-	width:50%;
-	position:absolute;
-	top:10%;
-	left:47%;
-}
-#indicador{
-	height:100%;
-	position:absolute;
-
-}
-#fuel{
-	background-color:#ff0101;
-	display:inline-block;
-	position: absolute;
-	top:5%;
-	left:10px;
-    height:100px;
-    width:60px;
-	text-align:center;
-}
-#contenedorBarra{
-	position: absolute;
-	top:36px;
-	left:-2px;
-	width:100%;	
-	height:73%;	
-	background-color:#ff0101;
-	border-style: outset;
-	border-color: black;
-}
-#barra{
-	width:100%;	
-	height:0%;	
-	background-color:#821a1a;
-}	
-#mostrar{
-	position:fixed;
-	right:5px;
-	top:5px;
-	display: inline-block;
-	width:83px;
-	height:83px;
-}
-#mostrar:active {border-style: inset; border-color:purple; background-color:#9C27B0;}
-#mostrar:hover {transform: scale(1.2);}
-#contenedorMenu{	
-	display: none;
-	background-color: #d4a7cc;
-	position:fixed;
-	top:0px;
-	bottom:0px;
-	left:0px;
-	right:0px;
-	z-index:3;
-	border-style:inset;
-	border-color:purple;
-	border-width: 10px;
-	text-align:center;
-}
-#menuMovil{
-	display:inline-block;
-	margin-top:5%;
-	text-align:center;
-	font-size: 30px;
-	color: #9fdeca;
-}
-#reanudar{
-	display: inline-block;
-	width:200px;
-	background-color: purple;
-	cursor:pointer;
-	border-style:solid;
-	border-color:#9fdeca;
-	border-width: 5px;
-}
-#reanudar:active {border-width: 15px;}
-#reanudar:hover {transform: scale(1.2);}
-#ajustesMovil{
-	display: inline-block;
-	width:200px;
-	background-color: purple;
-	cursor:pointer;
-	border-style:solid;
-	border-color:#9fdeca;
-	border-width: 5px;
-}
-#ajustesMovil:active {border-width: 15px;}
-#ajustesMovil:hover {transform: scale(1.2);}
-#instrucciones{
-	display: inline-block;
-	width:250px;
-	background-color: purple;
-	cursor:pointer;
-	border-style:solid;
-	border-color:#9fdeca;
-	border-width: 5px;
-}
-#instrucciones:active {border-width: 15px;}
-#instrucciones:hover {transform: scale(1.2);}
-#menuAjustes{	
-	display:none;
-	z-index:4;
-	position: absolute;
-	top:30px;
-	left:30px;
-	right:30px;
-	bottom:30px;
-	text-align:center;
-	background-color: #d4a7cc;
-	border-style:solid;
-	border-color:purple;
-	border-width: 10px;
-	font-size:20px;
-}
-.dificultad1{
-	padding: 15px 32px;
-	font-size:20px;
-	text-align:center;
-	cursor:pointer;
-	background-color: #a2b7c9;
-	color: black;
-}
-.dificultad1:active {border-style: inset;}
-.dificultad1:hover {transform: scale(1.2);}
-.dificultad2{
-	display:inline-block;
-	margin-left:20px;
-	margin-top:20px;
-	padding: 15px 32px;
-	font-size:20px;
-	text-align:center;
-	cursor:pointer;
-	background-color: #e7e7e7; 
-	color: black;
-}
-.dificultad2:active {border-style: inset;}
-.dificultad2:hover {transform: scale(1.2);}
-.dificultad3{
-	display:inline-block;
-	margin-left:20px;
-	margin-top:20px;
-	padding: 15px 32px;
-	font-size:20px;
-	text-align:center;
-	cursor:pointer;
-	background-color: #e7e7e7; 
-	color: black;
-}
-.dificultad3:active {border-style: inset;}
-.dificultad3:hover {transform: scale(1.2);}
-#acerca{
-	background-color: #e8dbde;
-	border-style: outset;
-	border-color: #898e8b;
-	font-size: 20px;
-	padding: 8px;
-	cursor: pointer;
-}
-#acerca:active {border-style: inset; border-color:purple; background-color:#9C27B0;}
-#acerca:hover {font-size: 26px; padding:12px;}
-#cerrarMovil{
-	position:absolute;
-	bottom:3%;
-	right:3%;
-	width:60px;
-	cursor:pointer;
-}
-#cerrarMovil:active {border-style: inset; border-color:purple; background-color:#9C27B0;}
-#cerrarMovil:hover {transform: scale(1.2);}
-#final{
-	display:none;
-	z-index: 3;
-	position: absolute;
-	top:10%;
-	left:15%;
-	width: 70%;
-	text-align: center;
-	background-color: #d4a7cc;
-	border-style:outset; 
-	font-size:30px;
-}
-#tryagain{
-	padding: 15px 32px;
-	font-size:20px;
-	text-align:center;
-	cursor:pointer;
-	margin-bottom: 6px;
-}
-#contenedorInfIns{
-	display:inline-block;
-	position:fixed;
-	width:100%;
-	height:100%;
-	z-index:4;
-}
-#informacionMenu{
-	display:inline-block;
-	position: absolute;
-	top:10%;
-	left:15%;
-	height: 80%;
-	width: 70%;
-	text-align: center;
-	background-color: #d4a7cc;
-	border-style:outset; 
-	font-size:14px;
-}
-#instruccionesMenu{
-	display:inline-block;
-	position: absolute;
-	top:10%;
-	left:15%;
-	height: 80%;
-	width: 70%;
-	text-align: center;
-	background-color: #d4a7cc;
-	border-style:outset; 
-	font-size:14px;
-}
-#volverIns{
-	position: absolute;
-	bottom: 3%;
-	right: 3%;
-	display: inline-block;
-	width:200px;
-	height: 40px;
-	background-color: purple;
-	cursor:pointer;
-	border-style:solid;
-	border-color:#9fdeca;
-	border-width: 5px;
-	text-align: center;
-	color:#9fdeca;
-	font-size:36px;
-}
-#volverIns:hover{transform: scale(1.2);}
-#volverInf{
-	position: absolute;
-	bottom: 3%;
-	right: 3%;
-	display: inline-block;
-	width:200px;
-	height: 40px;
-	background-color: purple;
-	cursor:pointer;
-	border-style:solid;
-	border-color:#9fdeca;
-	border-width: 5px;
-	text-align: center;
-	color:#9fdeca;
-	font-size:36px;
-}
-#volverInf:hover{transform: scale(1.2);}
-#menu,#cerrar,.c{display:none;}
+body,html{height:100%;padding:0px;margin:0px;background-image: url("../img/background.png");background-position:center;background-size:cover;}.a{width:30%;height:100%;overflow:hidden;position:fixed;left:0px;top:0px;z-index:2;}#derecha{width:30%;height: 100%;position:fixed;top:0px;right:0px;display:inline-block;z-index:2;}#nave{text-align:center;position:fixed;top:10%;width:100%;height:30%;}#nave img{height:100%;}#divLuna{text-align:center;z-index: 1;height:10%;width:100%;position:fixed;bottom:0px;left:0px;}#luna{height: 100%;width:100%;}#divReiniciar{position:absolute;height:25%;width:50%;min-width: 80px;top:30%;right:10px;}#reiniciar{cursor:pointer;width:100%;max-height: 100%;}#reiniciar:active{border-style: inset; border-color:purple; background-color:#9C27B0;}#reiniciar:hover{transform: scale(1.2);}#divMotor{height:30%;width:70%;min-width:100px;position:absolute;bottom:0%;right:0px;}#motor{position:absolute;bottom:10%;cursor:pointer;width:100%;max-height: 100%;}#cpanel{width:100%;height:100%;}#divVelocidad{display:inline-block;height:80px;width:90px;text-align:center;z-index:1;background-image: url("../img/speedometerbase.png");background-position:3px;background-size: contain;background-repeat: no-repeat;position:absolute;bottom:5%;}#aguja{height:35%;position:relative;left:-3px;top:30px;}#divAltura{background-image: url("../img/altura.png");background-position: 10px;background-size: contain;background-repeat: no-repeat;position:absolute;height: 110px;width: 70px;top: 39%;}#altura{height:30%;width:50%;position:absolute;top:10%;left:47%;}#indicador{height:100%;position:absolute;}#fuel{background-color:#ff0101;display:inline-block;position: absolute;top:5%;left:10px; height:100px; width:60px;text-align:center;}#contenedorBarra{position: absolute;top:36px;left:-2px;width:100%;height:73%;background-color:#ff0101;border-style: outset;border-color: black;}#barra{width:100%;height:0%;background-color:#821a1a;}#mostrar{position:fixed;right:5px;top:5px;display: inline-block;width:83px;height:83px;}#mostrar:active{border-style: inset; border-color:purple; background-color:#9C27B0;}#mostrar:hover{transform: scale(1.2);}#contenedorMenu{display: none;background-color: #d4a7cc;position:fixed;top:0px;bottom:0px;left:0px;right:0px;z-index:3;border-style:inset;border-color:purple;border-width: 10px;text-align:center;}#menuMovil{display:inline-block;margin-top:5%;text-align:center;font-size: 30px;color: #9fdeca;}#reanudar{display: inline-block;width:200px;background-color: purple;cursor:pointer;border-style:solid;border-color:#9fdeca;border-width: 5px;}#reanudar:active{border-width: 15px;}#reanudar:hover{transform: scale(1.2);}#ajustesMovil{display: inline-block;width:200px;background-color: purple;cursor:pointer;border-style:solid;border-color:#9fdeca;border-width: 5px;}#ajustesMovil:active{border-width: 15px;}#ajustesMovil:hover{transform: scale(1.2);}#instrucciones{display: inline-block;width:250px;background-color: purple;cursor:pointer;border-style:solid;border-color:#9fdeca;border-width: 5px;}#instrucciones:active{border-width: 15px;}#instrucciones:hover{transform: scale(1.2);}#menuAjustes{display:none;z-index:4;position: absolute;top:30px;left:30px;right:30px;bottom:30px;text-align:center;background-color: #d4a7cc;border-style:solid;border-color:purple;border-width: 10px;font-size:20px;}.dificultad1{padding: 15px 32px;font-size:20px;text-align:center;cursor:pointer;background-color: #a2b7c9;color: black;}.dificultad1:active{border-style: inset;}.dificultad1:hover{transform: scale(1.2);}.dificultad2{display:inline-block;margin-left:20px;margin-top:20px;padding: 15px 32px;font-size:20px;text-align:center;cursor:pointer;background-color: #e7e7e7; color: black;}.dificultad2:active{border-style: inset;}.dificultad2:hover{transform: scale(1.2);}.dificultad3{display:inline-block;margin-left:20px;margin-top:20px;padding: 15px 32px;font-size:20px;text-align:center;cursor:pointer;background-color: #e7e7e7; color: black;}.dificultad3:active{border-style: inset;}.dificultad3:hover{transform: scale(1.2);}#acerca{background-color: #e8dbde;border-style: outset;border-color: #898e8b;font-size: 20px;padding: 8px;cursor: pointer;}#acerca:active{border-style: inset; border-color:purple; background-color:#9C27B0;}#acerca:hover{font-size: 26px; padding:12px;}#cerrarMovil{position:absolute;bottom:3%;right:3%;width:60px;cursor:pointer;}#cerrarMovil:active{border-style: inset; border-color:purple; background-color:#9C27B0;}#cerrarMovil:hover{transform: scale(1.2);}#final{display:none;z-index: 3;position: absolute;top:10%;left:15%;width: 70%;text-align: center;background-color: #d4a7cc;border-style:outset; font-size:30px;}#tryagain{padding: 15px 32px;font-size:20px;text-align:center;cursor:pointer;margin-bottom: 6px;}#contenedorInfIns{display:inline-block;position:fixed;width:100%;height:100%;z-index:4;}#informacionMenu{display:inline-block;position: absolute;top:10%;left:15%;height: 80%;width: 70%;text-align: center;background-color: #d4a7cc;border-style:outset; font-size:14px;}#instruccionesMenu{display:inline-block;position: absolute;top:10%;left:15%;height: 80%;width: 70%;text-align: center;background-color: #d4a7cc;border-style:outset; font-size:14px;}#volverIns{position: absolute;bottom: 3%;right: 3%;display: inline-block;width:200px;height: 40px;background-color: purple;cursor:pointer;border-style:solid;border-color:#9fdeca;border-width: 5px;text-align: center;color:#9fdeca;font-size:36px;}#volverIns:hover{transform: scale(1.2);}#volverInf{position: absolute;bottom: 3%;right: 3%;display: inline-block;width:200px;height: 40px;background-color: purple;cursor:pointer;border-style:solid;border-color:#9fdeca;border-width: 5px;text-align: center;color:#9fdeca;font-size:36px;}#volverInf:hover{transform: scale(1.2);}#menu,#cerrar,.c{display:none;}
